--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,9 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'com.graphql-java:graphql-spring-boot-starter:5.0.2'
-    implementation 'com.graphql-java:graphql-java-tools:5.2.4'
-    implementation 'com.graphql-java:graphiql-spring-boot-starter:5.0.2'
+//    implementation 'com.graphql-java:graphql-spring-boot-starter:5.0.2'
+//    implementation 'com.graphql-java:graphql-java-tools:5.2.4'
+//    implementation 'com.graphql-java:graphiql-spring-boot-starter:5.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-graphql'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'mysql:mysql-connector-java:8.0.33'
